Font Fix
I couldn't stand it anymore. That previous font was unreadable in long blocks of text.

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ h3 {
 
 h4 {
   font-size: 1.75vw;
-  font-family: myFont;
+  font-family: "Open Sans";
   color: #298c91;
 }
 /* Portfolio */
